<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.drogariadopovo.treinamento.presentation.activity.getintouch.GetInTouchViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:cardElevation="10dp"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:id="@+id/contact_anonymously_card"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/contact_anonymously_group">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:checked="@={viewModel.anonymous}"
                                android:id="@+id/contact_anonymously"/>

                        </RadioGroup>

                        <View
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:id="@+id/view_radioButton"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_in_touch_with_anonymously"
                        android:id="@+id/text_aux"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/gray"
                        android:textSize="18sp"
                        android:fontFamily="@font/montserrat_bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:cardElevation="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="5dp">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:hint="@string/type_message"
                        android:background="@drawable/box_layout"
                        android:padding="10dp"
                        android:text="@={viewModel.message}"
                        android:layout_margin="20dp"
                        android:id="@+id/message"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="start"/>


            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:onClick="@{() -> viewModel.send()}"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                android:id="@+id/send"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@color/white"
                android:background="@drawable/round_button"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>