<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:elevation="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/blue">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="Bem vinda,"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:id="@+id/name"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="Maria do Carmo Peixoto"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="85dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:textSize="14sp"
                            android:text="@string/finish_signup"
                            />

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vovo_funcionario"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="18sp"
                            android:textColor="@color/blue"
                            android:fontFamily="@font/montserrat_bold"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:theme="@style/EditTextTheme"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:textColor="@color/gray"
                                android:id="@+id/phone_field"
                                android:layout_height="wrap_content" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp"
                        android:backgroundTint="@color/red">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:fontFamily="@font/montserrat_light"
                                android:textColor="@color/white"
                                android:text="@string/add_photo"/>

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/add_photo"/>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:textSize="18sp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/montserrat_bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:theme="@style/EditTextTheme"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:textColor="@color/gray"
                            android:id="@+id/email_field"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/unity"
                            android:textSize="18sp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/blue"
                            android:fontFamily="@font/montserrat_bold"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/unity_spinner"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray2"
                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/role"
                            android:layout_marginBottom="10dp"
                            android:textSize="18sp"
                            android:textColor="@color/blue"
                            android:fontFamily="@font/montserrat_bold"/>

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/role_spinner"
                            />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/light_gray2"
                            android:layout_marginBottom="20dp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:id="@+id/signup_bt"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/white"
            android:background="@drawable/round_button"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>